--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@darkforest_eth/contracts": "^6.7.19",
-    "@darkforest_eth/types": "^6.1.25"
+    "@darkforest_eth/types": "^6.1.25",
+    "isomorphic-fetch": "^3.0.0"
   },
   "type": "module"
 }
